syntax = "proto3";

package par2vec;
option go_package = "./recommender/par2vec";

service Par2Vec {
    rpc convertParToVec(Par2VecRequest) returns (DefaultReply) {}
}

message Par2VecRequest {
    string paragraph  = 1;
}

message DefaultReply {
    uint32  dim         = 1;
    repeated float fVec = 2;
}